opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_metaquot"
bug-reports: "https://github.com/janestreet/ppx_metaquot/issues"
dev-repo: "git+https://github.com/janestreet/ppx_metaquot.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "ppx_core"
  "ppx_driver"
  "ppx_traverse_builtins"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "1.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Write OCaml AST fragment using OCaml syntax

Ppx_metaquot is a ppx rewriter allowing you to write values
representing the OCaml AST in the OCaml syntax.
"
